# basketball-stats-model

./: .gitignore  .gitmodules  LICENSE  TODO.txt  pyproject.toml
src/basketball_stats_bot/: config.py  main.py
src/basketball_stats_bot/data/XGBoost/: minutes_projection_model.pkl
src/basketball_stats_bot/data/logistic_regression/: AST_logreg_model.pkl  AST_logreg_scaler.pkl  BLK_logreg_model.pkl  BLK_logreg_scaler.pkl  FG3M_logreg_model.pkl  FG3M_logreg_scaler.pkl  PRA_logreg_model.pkl  PRA_logreg_scaler.pkl  PTS_AST_logreg_model.pkl  PTS_AST_logreg_scaler.pkl  PTS_REB_logreg_model.pkl  PTS_REB_logreg_scaler.pkl  PTS_logreg_model.pkl  PTS_logreg_scaler.pkl  REB_AST_logreg_model.pkl  REB_AST_logreg_scaler.pkl  REB_logreg_model.pkl  REB_logreg_scaler.pkl  STL_logreg_model.pkl  STL_logreg_scaler.pkl
src/basketball_stats_bot/programs/main_functions/: historical_data.py  nba_api_database.py  props.py  result.py  updatingDB.py
src/basketball_stats_bot/programs/scoring/: logreg_model_scores.py  scoring_functions.py  xgboost_model_scores.py
src/basketball_stats_bot/programs/updating_functions/: connecting_dbs.py  creating_model_params.py  game_ids.py  grading.py  (+6 more)
src/basketball_stats_bot/tests/: isotonic.py  plotting_data.py  testing_results_overall.py  testing_scoring.py
src/testing/: bref_injury.py  connecting_position_dnps.py  ema_averages.py  minutes_projection_tt.py  parsing_nba_injuries.py  pdf_to_df.py  team_totals_for_corrupted.py  testing.py
testing/: creating_points_projection_model.py  fixing_pct_share.py  player_percentages_implementation.py  testing.py
(+153 files in other folders)
